apps/media/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.19.2979-ls320
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: media-pvc
              mountPath: "/media"
            - name: config-pvc
              mountPath: "/config"
      volumes:
        - name: media-pvc
          persistentVolumeClaim:
            claimName: media
        - name: config-pvc
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: config-cm
          configMap:
            name: sonarr-cm
