apps/media/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  ingressClassName: "cilium"
  rules:
    - host: sonarr.g2net.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
  tls:
    - hosts:
        - sonarr.g2net.xyz
      secretName: g2net-xyz-tls
